tests/paczka1/fuzzy1/98656970.err
Error in line 26: JQ2qn S206 79,50
Error in line 28: JQ2qn S206 210,9
